name h1 fixed, letter spacing added, more edits

--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,21 @@
 body {
   font-family: 'Poiret One', cursive;
+  font-weight: bold;
+  letter-spacing: 1px;
+  width: 760px;
+  margin: 0 auto;
+}
+
+nav {
+  height: 50px;
+}
+
+nav li {
+  display: inline;
+  padding: 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #222;
 }
